fix layout issue with books page

--- a/assets/css/tufte.css
+++ b/assets/css/tufte.css
@@ -1403,7 +1403,7 @@ a.pagination-item:hover {
 }
 
 .read-state li>div div {
-    white-space: nowrap;
+    /*white-space: nowrap;*/
     white-space: initial;
 }
 
@@ -1423,19 +1423,53 @@ a.pagination-item:hover {
     letter-spacing: -.012em;
 }
 
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 840px) {
+    .read-state ol {
+        width: 70%;
+    }
+
+    .library .read-state {
+        width: 100%;
+        margin-bottom: 4%;
+        padding: 1%;
+    }
+
     .read-state li>div div:nth-child(3) {
         display: none;
     }
 
     .read-state li>div {
         -ms-grid-columns: 100px 100px 90px;
-        grid-template-columns: 100px 100px 90px;
+        grid-template-columns: 1fr 0.7fr 100px;
     }
 
     .two_cols li>div {
-        -ms-grid-columns: 160px 160px;
-        grid-template-columns: 160px 160px;
+        -ms-grid-columns: 130px 130px;
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .read-state ol {
+        width: 85%;
+    }
+
+    .read-state li>div div:nth-child(2) {
+        display: none;
+    }
+
+    .two_cols li>div div:nth-child(2) {
+        display: block;
+    }
+
+    .read-state li>div {
+        -ms-grid-columns: 100px 100px;
+        grid-template-columns: 130px 130px;
+    }
+
+    .two_cols li>div {
+        -ms-grid-columns: 130px 130px;
+        grid-template-columns: 130px 130px;
     }
 }
 
@@ -1647,22 +1681,6 @@ ul.no-bullets li::before {
 
 .li:last-child {
     padding-top: 5px;
-}
-
-@media screen and (max-width: 640px) {
-    .read-state li>div div:nth-child(3) {
-        display: none;
-    }
-
-    .read-state li>div {
-        -ms-grid-columns: 100px 100px 90px;
-        grid-template-columns: 100px 100px 90px;
-    }
-
-    .two_cols li>div {
-        -ms-grid-columns: 160px 160px;
-        grid-template-columns: 160px 160px;
-    }
 }
 
 /* * Footer */
